--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
     </script>
     <script src="js/main.js"></script>
     <script src="js/sceneMain.js"></script>
-    <script src="js/sceneOver.js"></script>
+    <script src="js/testscene.js"></script>
     <style type="text/css">
         body {
             margin: 0;
